// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`An ETextField > number > looks like a textfield > empty 1`] = `
<div data-app>
     <div class="e-form-container">
          <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--single-line v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <input id
                                     type="text">
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;

exports[`An ETextField > number > looks like a textfield > with text 1`] = `
<div data-app>
     <div class="e-form-container"
          value="3.14">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <input id
                                     type="text">
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;

exports[`An ETextField > text > looks like a textfield > empty 1`] = `
<div data-app>
     <div class="e-form-container">
          <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--single-line v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <input id
                                     type="text">
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;

exports[`An ETextField > text > looks like a textfield > with text 1`] = `
<div data-app>
     <div class="e-form-container"
          value="MyText">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <input id
                                     type="text">
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;
